npmi: fix run table elements overlapping (#5468)

--- a/tensorboard/webapp/plugins/npmi/views/main/main_component.scss
+++ b/tensorboard/webapp/plugins/npmi/views/main/main_component.scss
@@ -53,7 +53,6 @@ limitations under the License.
 }
 
 .violin-filters {
-  min-height: 0px;
   width: 100%;
 }
 
